<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generell Strings -->
    <string name="app_name">Slider Menu</string>
    <string name="action_settings">Settings</string>

    <!-- activity_login Strings -->
    <string name="etfHintLoginName">name@email.com</string>
    <string name="pwtfHintLoginPassword">password</string>
    <string name="cbAutoLogin">Eingeloggt bleiben</string>
    <string name="btnLogin">Login</string>
    <string name="tvLoginText">Login</string>
    <string name="msg_login_error">Error: Falsches Password oder Username</string>

    <!-- activity_main Strings -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>